# aur

./: .empty  .packages  .split  README.md  pkg.lst
010editor/: .SRCINFO  .gitignore  PKGBUILD
0ad-git/: .SRCINFO  .gitignore  PKGBUILD
0cc-famitracker/: .gitignore
0wgram/: .gitignore
0x0uploader/: .SRCINFO  PKGBUILD
1panel/: .SRCINFO  .gitignore
1panel-bin/: .SRCINFO  PKGBUILD
1password/: .gitignore  PKGBUILD
1password-beta/: .SRCINFO  PKGBUILD
1password-cli/: .gitignore
2009scape/: .gitignore
2009scape-git/: .gitignore
2cdt/: .SRCINFO  .gitignore  0001-fix-incompatible-pointer-types.patch
2p-kt/: .gitignore
2s2h-bin/: .SRCINFO  PKGBUILD
3dm2/: .gitignore
3dslicer/: .SRCINFO
3dslicer-bin/: .SRCINFO  PKGBUILD
3dslicer-nightly-bin/: .SRCINFO  PKGBUILD
3fa-bin/: .SRCINFO
3proxy/: .gitignore
48tools/: .SRCINFO  48tools.desktop  PKGBUILD
4ktokkit/: .SRCINFO
4kvideodownloader/: .SRCINFO
4kvideodownloaderplus/: .SRCINFO
4kyoutubetomp3/: .SRCINFO
64gram-desktop/: .gitignore  PKGBUILD
64gram-desktop-bin/: .SRCINFO  .gitignore  PKGBUILD
7-zip/: PKGBUILD
7-zip-bin/: .SRCINFO  PKGBUILD
7-zip-full/: .gitignore
7d2d-modlauncher-bin/: .SRCINFO  7d2d-modlauncher.desktop  PKGBUILD
7kaa/: .gitignore
7plus/: .SRCINFO  PKGBUILD
8188eu-dkms-git/: .gitignore
8188fu-dkms-git/: .gitignore
8188fu-supremegamers-dkms-git/: .gitignore
8192cu-dkms/: .SRCINFO  PKGBUILD
86box-appimage/: .SRCINFO  PKGBUILD
86box-git/: PKGBUILD
86box-manager-git/: .gitignore
86box-roms-git/: .SRCINFO  PKGBUILD
a-sid/: .gitignore
a4tech-bloody-driver-git/: .gitignore
aaaaxy/: .SRCINFO  PKGBUILD
aaaaxy-bin/: .SRCINFO  PKGBUILD
aaaaxy-snap/: .SRCINFO  PKGBUILD
aacskeys/: .SRCINFO  .gitignore  PKGBUILD  aacskeys-0.4.0f.patch
aarch64-linux-musl/: .gitignore
aarch64-none-linux-gnu-gcc-bin/: .SRCINFO  PKGBUILD
aardwolfgui-git/: .SRCINFO  PKGBUILD
aax-bruteforce/: .SRCINFO  PKGBUILD
ab-av1/: .SRCINFO  PKGBUILD
abchr/: .gitignore
abcpp/: .gitignore
abctl/: .SRCINFO  PKGBUILD
abdownloadmanager-bin/: .SRCINFO  PKGBUILD
abiword-git/: fix-build-with-libxml2-2.12.patch
abpoa/: .SRCINFO
abra/: .SRCINFO  PKGBUILD
abra-bin/: .SRCINFO  PKGBUILD  nvchecker.toml
abracadabra/: .SRCINFO  PKGBUILD
abrowser-bin/: .SRCINFO  PKGBUILD
abrus-gtk-theme-git/: .gitignore
abstreet-bin/: .SRCINFO
abstreet-git/: .gitignore
ac-library/: .gitignore  ac-expander
acast-bin/: .SRCINFO
accel-ppp/: .SRCINFO  PKGBUILD
access-export/: .gitignore
accutimes/: .SRCINFO  PKGBUILD
ace/: .SRCINFO  PKGBUILD
acer-wmi-battery-dkms/: acer-wmi-battery.conf  dkms.conf
acer-wmi-battery-dkms-git/: .SRCINFO  .gitignore  PKGBUILD  acer-wmi-battery.install
acers3fand/: .gitignore
aces-container/: PKGBUILD
achilles-git/: 0002-fix-broken-import.patch
ack-git/: .SRCINFO  PKGBUILD  ack-cpm-aslod.patch
acme-dns/: .gitignore
acme-dns-bin/: .gitignore
acmetool-bin/: .gitignore
acodec-bin/: .SRCINFO
acp3x-rn-dkms/: .gitignore
acreom-bin/: .SRCINFO  PKGBUILD
act-actsim-git/: .SRCINFO  PKGBUILD
act-bin/: .SRCINFO  PKGBUILD
act-core-git/: act-core-git.csh  act-core-git.sh  install-scripts.patch  script-makefile.patch  standard-makefile.patch
python-openmesh/: CMakeLists.txt
python-stsci.skypac/: .SRCINFO  .gitignore  PKGBUILD  fix-doc-underline-length.patch  setup.cfg
sigmavpn/: .gitignore  fix-paths.patch  meson.build
(+35124 files in other folders)
