[metadata]
package_name = stsci.skypac
description = Sky matching on image mosaic
long_description = README.md
author = Mihai Cara, Warren Hack, Pey Lian Lim
author_email = help@stsci.edu
license = BSD-3-Clause
edit_on_github = False
github_project = spacetelescope/stsci.skypac
description-file = README.md
url = https://github.com/spacetelescope/stsci.skypac
homepage = https://github.com/spacetelescope/stsci.skypac
